adjusted CSS to fix styling issue with forms rendered on Iphone and Ipad

--- a/public/style.css
+++ b/public/style.css
@@ -45,7 +45,9 @@ body{
 
 .profilePic{
 	max-width: 14rem;
-
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
 
 .editProfilePic{
